ksgsoft-springbootreact-2057fe529704/cps-customer-frontend/src/MgiMessage/ApplicationMessageParser.js
// Generated from ApplicationMessage.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ApplicationMessageListener = require('./ApplicationMessageListener').ApplicationMessageListener;
var grammarFileName = "ApplicationMessage.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'RSP-'", "':,'", "','", "':::'", "'::'", "';'",
                     "':;'", "'RSP-TEST:,'", "':'", "'REQ-TEST:,'", "'UNS-'",
                     "'REPT-'", "'REQ-'", "':::::'", "'::::;'", "'-'", "'NST'",
                     "'NDT'", "'AST'", "'ADT'", "'EST'", "'EDT'", "'CST'",
                     "'CDT'", "'MDT'", "'MST'", "'PST'", "'PDT'", "'YST'",
                     "'YDT'", "'HST'", "'HDT'", "'BST'", "'BDT'", "'COMPLD'",
                     "'DENIED'", "'='" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null,
                      null, null, null, null, null, null, null, null, null,
                      null, null, null, null, null, null, null, null, null,
                      null, null, null, null, null, null, null, null, null,
                      null, null, "Mod", "Identifier", "DecimalNumber",
                      "Text", "BinaryData", "WS" ];

var ruleNames =  [ "message", "response", "test", "uns", "sequence", "date",
                   "year", "month", "day", "time", "hour", "minute", "second",
                   "timeZone", "status", "termRept", "errorCode", "block",
                   "parameterBlock", "parameter", "parameterName", "parameterValue" ];

function ApplicationMessageParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ApplicationMessageParser.prototype = Object.create(antlr4.Parser.prototype);
ApplicationMessageParser.prototype.constructor = ApplicationMessageParser;

Object.defineProperty(ApplicationMessageParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ApplicationMessageParser.EOF = antlr4.Token.EOF;
ApplicationMessageParser.T__0 = 1;
ApplicationMessageParser.T__1 = 2;
ApplicationMessageParser.T__2 = 3;
ApplicationMessageParser.T__3 = 4;
ApplicationMessageParser.T__4 = 5;
ApplicationMessageParser.T__5 = 6;
ApplicationMessageParser.T__6 = 7;
ApplicationMessageParser.T__7 = 8;
ApplicationMessageParser.T__8 = 9;
ApplicationMessageParser.T__9 = 10;
ApplicationMessageParser.T__10 = 11;
ApplicationMessageParser.T__11 = 12;
ApplicationMessageParser.T__12 = 13;
ApplicationMessageParser.T__13 = 14;
ApplicationMessageParser.T__14 = 15;
ApplicationMessageParser.T__15 = 16;
ApplicationMessageParser.T__16 = 17;
ApplicationMessageParser.T__17 = 18;
ApplicationMessageParser.T__18 = 19;
ApplicationMessageParser.T__19 = 20;
ApplicationMessageParser.T__20 = 21;
ApplicationMessageParser.T__21 = 22;
ApplicationMessageParser.T__22 = 23;
ApplicationMessageParser.T__23 = 24;
ApplicationMessageParser.T__24 = 25;
ApplicationMessageParser.T__25 = 26;
ApplicationMessageParser.T__26 = 27;
ApplicationMessageParser.T__27 = 28;
ApplicationMessageParser.T__28 = 29;
ApplicationMessageParser.T__29 = 30;
ApplicationMessageParser.T__30 = 31;
ApplicationMessageParser.T__31 = 32;
ApplicationMessageParser.T__32 = 33;
ApplicationMessageParser.T__33 = 34;
ApplicationMessageParser.T__34 = 35;
ApplicationMessageParser.T__35 = 36;
ApplicationMessageParser.T__36 = 37;
ApplicationMessageParser.Mod = 38;
ApplicationMessageParser.Identifier = 39;
ApplicationMessageParser.DecimalNumber = 40;
ApplicationMessageParser.Text = 41;
ApplicationMessageParser.BinaryData = 42;
ApplicationMessageParser.WS = 43;

ApplicationMessageParser.RULE_message = 0;
ApplicationMessageParser.RULE_response = 1;
ApplicationMessageParser.RULE_test = 2;
ApplicationMessageParser.RULE_uns = 3;
ApplicationMessageParser.RULE_sequence = 4;
ApplicationMessageParser.RULE_date = 5;
ApplicationMessageParser.RULE_year = 6;
ApplicationMessageParser.RULE_month = 7;
ApplicationMessageParser.RULE_day = 8;
ApplicationMessageParser.RULE_time = 9;
ApplicationMessageParser.RULE_hour = 10;
ApplicationMessageParser.RULE_minute = 11;
ApplicationMessageParser.RULE_second = 12;
ApplicationMessageParser.RULE_timeZone = 13;
ApplicationMessageParser.RULE_status = 14;
ApplicationMessageParser.RULE_termRept = 15;
ApplicationMessageParser.RULE_errorCode = 16;
ApplicationMessageParser.RULE_block = 17;
ApplicationMessageParser.RULE_parameterBlock = 18;
ApplicationMessageParser.RULE_parameter = 19;
ApplicationMessageParser.RULE_parameterName = 20;
ApplicationMessageParser.RULE_parameterValue = 21;

function MessageContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_message;
    return this;
}

MessageContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MessageContext.prototype.constructor = MessageContext;

MessageContext.prototype.response = function() {
    return this.getTypedRuleContext(ResponseContext,0);
};

MessageContext.prototype.test = function() {
    return this.getTypedRuleContext(TestContext,0);
};

MessageContext.prototype.uns = function() {
    return this.getTypedRuleContext(UnsContext,0);
};

MessageContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterMessage(this);
	}
};

MessageContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitMessage(this);
	}
};




ApplicationMessageParser.MessageContext = MessageContext;

ApplicationMessageParser.prototype.message = function() {

    var localctx = new MessageContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ApplicationMessageParser.RULE_message);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ApplicationMessageParser.T__0:
            this.state = 44;
            this.response();
            break;
        case ApplicationMessageParser.T__7:
        case ApplicationMessageParser.T__9:
            this.state = 45;
            this.test();
            break;
        case ApplicationMessageParser.T__10:
        case ApplicationMessageParser.T__11:
        case ApplicationMessageParser.T__12:
            this.state = 46;
            this.uns();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ResponseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_response;
    return this;
}

ResponseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ResponseContext.prototype.constructor = ResponseContext;

ResponseContext.prototype.EOF = function() {
    return this.getToken(ApplicationMessageParser.EOF, 0);
};

ResponseContext.prototype.Mod = function() {
    return this.getToken(ApplicationMessageParser.Mod, 0);
};

ResponseContext.prototype.date = function() {
    return this.getTypedRuleContext(DateContext,0);
};

ResponseContext.prototype.time = function() {
    return this.getTypedRuleContext(TimeContext,0);
};

ResponseContext.prototype.status = function() {
    return this.getTypedRuleContext(StatusContext,0);
};

ResponseContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ResponseContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterResponse(this);
	}
};

ResponseContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitResponse(this);
	}
};




ApplicationMessageParser.ResponseContext = ResponseContext;

ApplicationMessageParser.prototype.response = function() {

    var localctx = new ResponseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ApplicationMessageParser.RULE_response);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.state = 49;
            this.match(ApplicationMessageParser.T__0);
            this.state = 50;
            this.match(ApplicationMessageParser.Mod);
            this.state = 51;
            this.match(ApplicationMessageParser.T__1);
            this.state = 52;
            this.date();
            this.state = 53;
            this.match(ApplicationMessageParser.T__2);
            this.state = 54;
            this.time();
            this.state = 55;
            this.match(ApplicationMessageParser.T__3);
            this.state = 56;
            this.status();
            this.state = 57;
            this.match(ApplicationMessageParser.T__4);
            this.state = 58;
            this.block();
            this.state = 59;
            this.match(ApplicationMessageParser.T__5);
            break;

        case 2:
            this.state = 61;
            this.match(ApplicationMessageParser.T__0);
            this.state = 62;
            this.match(ApplicationMessageParser.Mod);
            this.state = 63;
            this.match(ApplicationMessageParser.T__1);
            this.state = 64;
            this.date();
            this.state = 65;
            this.match(ApplicationMessageParser.T__2);
            this.state = 66;
            this.time();
            this.state = 67;
            this.match(ApplicationMessageParser.T__3);
            this.state = 68;
            this.status();
            this.state = 69;
            this.match(ApplicationMessageParser.T__6);
            break;

        }
        this.state = 73;
        this.match(ApplicationMessageParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TestContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_test;
    return this;
}

TestContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TestContext.prototype.constructor = TestContext;

TestContext.prototype.EOF = function() {
    return this.getToken(ApplicationMessageParser.EOF, 0);
};

TestContext.prototype.date = function() {
    return this.getTypedRuleContext(DateContext,0);
};

TestContext.prototype.time = function() {
    return this.getTypedRuleContext(TimeContext,0);
};

TestContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};

TestContext.prototype.status = function() {
    return this.getTypedRuleContext(StatusContext,0);
};

TestContext.prototype.Text = function() {
    return this.getToken(ApplicationMessageParser.Text, 0);
};

TestContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterTest(this);
	}
};

TestContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitTest(this);
	}
};




ApplicationMessageParser.TestContext = TestContext;

ApplicationMessageParser.prototype.test = function() {

    var localctx = new TestContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ApplicationMessageParser.RULE_test);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ApplicationMessageParser.T__7:
            this.state = 75;
            this.match(ApplicationMessageParser.T__7);
            this.state = 76;
            this.date();
            this.state = 77;
            this.match(ApplicationMessageParser.T__2);
            this.state = 78;
            this.time();
            this.state = 79;
            this.match(ApplicationMessageParser.T__4);
            this.state = 80;
            this.sequence();
            this.state = 81;
            this.match(ApplicationMessageParser.T__8);
            this.state = 82;
            this.status();
            this.state = 83;
            this.match(ApplicationMessageParser.T__4);
            this.state = 84;
            this.match(ApplicationMessageParser.Text);
            this.state = 85;
            this.match(ApplicationMessageParser.T__5);
            break;
        case ApplicationMessageParser.T__9:
            this.state = 87;
            this.match(ApplicationMessageParser.T__9);
            this.state = 88;
            this.date();
            this.state = 89;
            this.match(ApplicationMessageParser.T__2);
            this.state = 90;
            this.time();
            this.state = 91;
            this.match(ApplicationMessageParser.T__4);
            this.state = 92;
            this.sequence();
            this.state = 93;
            this.match(ApplicationMessageParser.T__3);
            this.state = 94;
            this.match(ApplicationMessageParser.Text);
            this.state = 95;
            this.match(ApplicationMessageParser.T__5);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 99;
        this.match(ApplicationMessageParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UnsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_uns;
    return this;
}

UnsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UnsContext.prototype.constructor = UnsContext;

UnsContext.prototype.EOF = function() {
    return this.getToken(ApplicationMessageParser.EOF, 0);
};

UnsContext.prototype.Mod = function() {
    return this.getToken(ApplicationMessageParser.Mod, 0);
};

UnsContext.prototype.date = function() {
    return this.getTypedRuleContext(DateContext,0);
};

UnsContext.prototype.time = function() {
    return this.getTypedRuleContext(TimeContext,0);
};

UnsContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

UnsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterUns(this);
	}
};

UnsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitUns(this);
	}
};




ApplicationMessageParser.UnsContext = UnsContext;

ApplicationMessageParser.prototype.uns = function() {

    var localctx = new UnsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ApplicationMessageParser.RULE_uns);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.state = 101;
            _la = this._input.LA(1);
            if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ApplicationMessageParser.T__10) | (1 << ApplicationMessageParser.T__11) | (1 << ApplicationMessageParser.T__12))) !== 0))) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 102;
            this.match(ApplicationMessageParser.Mod);
            this.state = 103;
            this.match(ApplicationMessageParser.T__1);
            this.state = 104;
            this.date();
            this.state = 105;
            this.match(ApplicationMessageParser.T__2);
            this.state = 106;
            this.time();
            this.state = 107;
            this.match(ApplicationMessageParser.T__13);
            this.state = 108;
            this.block();
            this.state = 109;
            this.match(ApplicationMessageParser.T__5);
            break;

        case 2:
            this.state = 111;
            _la = this._input.LA(1);
            if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ApplicationMessageParser.T__10) | (1 << ApplicationMessageParser.T__11) | (1 << ApplicationMessageParser.T__12))) !== 0))) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 112;
            this.match(ApplicationMessageParser.Mod);
            this.state = 113;
            this.match(ApplicationMessageParser.T__1);
            this.state = 114;
            this.date();
            this.state = 115;
            this.match(ApplicationMessageParser.T__2);
            this.state = 116;
            this.time();
            this.state = 117;
            this.match(ApplicationMessageParser.T__14);
            break;

        }
        this.state = 121;
        this.match(ApplicationMessageParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SequenceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_sequence;
    return this;
}

SequenceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SequenceContext.prototype.constructor = SequenceContext;

SequenceContext.prototype.Identifier = function() {
    return this.getToken(ApplicationMessageParser.Identifier, 0);
};

SequenceContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterSequence(this);
	}
};

SequenceContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitSequence(this);
	}
};




ApplicationMessageParser.SequenceContext = SequenceContext;

ApplicationMessageParser.prototype.sequence = function() {

    var localctx = new SequenceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ApplicationMessageParser.RULE_sequence);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(ApplicationMessageParser.Identifier);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_date;
    return this;
}

DateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DateContext.prototype.constructor = DateContext;

DateContext.prototype.year = function() {
    return this.getTypedRuleContext(YearContext,0);
};

DateContext.prototype.month = function() {
    return this.getTypedRuleContext(MonthContext,0);
};

DateContext.prototype.day = function() {
    return this.getTypedRuleContext(DayContext,0);
};

DateContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterDate(this);
	}
};

DateContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitDate(this);
	}
};




ApplicationMessageParser.DateContext = DateContext;

ApplicationMessageParser.prototype.date = function() {

    var localctx = new DateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ApplicationMessageParser.RULE_date);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.year();
        this.state = 126;
        this.match(ApplicationMessageParser.T__15);
        this.state = 127;
        this.month();
        this.state = 128;
        this.match(ApplicationMessageParser.T__15);
        this.state = 129;
        this.day();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function YearContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_year;
    return this;
}

YearContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
YearContext.prototype.constructor = YearContext;

YearContext.prototype.DecimalNumber = function() {
    return this.getToken(ApplicationMessageParser.DecimalNumber, 0);
};

YearContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterYear(this);
	}
};

YearContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitYear(this);
	}
};




ApplicationMessageParser.YearContext = YearContext;

ApplicationMessageParser.prototype.year = function() {

    var localctx = new YearContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ApplicationMessageParser.RULE_year);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 131;
        this.match(ApplicationMessageParser.DecimalNumber);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MonthContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_month;
    return this;
}

MonthContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MonthContext.prototype.constructor = MonthContext;

MonthContext.prototype.DecimalNumber = function() {
    return this.getToken(ApplicationMessageParser.DecimalNumber, 0);
};

MonthContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterMonth(this);
	}
};

MonthContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitMonth(this);
	}
};




ApplicationMessageParser.MonthContext = MonthContext;

ApplicationMessageParser.prototype.month = function() {

    var localctx = new MonthContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ApplicationMessageParser.RULE_month);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 133;
        this.match(ApplicationMessageParser.DecimalNumber);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DayContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_day;
    return this;
}

DayContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DayContext.prototype.constructor = DayContext;

DayContext.prototype.DecimalNumber = function() {
    return this.getToken(ApplicationMessageParser.DecimalNumber, 0);
};

DayContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterDay(this);
	}
};

DayContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitDay(this);
	}
};




ApplicationMessageParser.DayContext = DayContext;

ApplicationMessageParser.prototype.day = function() {

    var localctx = new DayContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, ApplicationMessageParser.RULE_day);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 135;
        this.match(ApplicationMessageParser.DecimalNumber);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TimeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_time;
    return this;
}

TimeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TimeContext.prototype.constructor = TimeContext;

TimeContext.prototype.hour = function() {
    return this.getTypedRuleContext(HourContext,0);
};

TimeContext.prototype.minute = function() {
    return this.getTypedRuleContext(MinuteContext,0);
};

TimeContext.prototype.second = function() {
    return this.getTypedRuleContext(SecondContext,0);
};

TimeContext.prototype.timeZone = function() {
    return this.getTypedRuleContext(TimeZoneContext,0);
};

TimeContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterTime(this);
	}
};

TimeContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitTime(this);
	}
};




ApplicationMessageParser.TimeContext = TimeContext;

ApplicationMessageParser.prototype.time = function() {

    var localctx = new TimeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, ApplicationMessageParser.RULE_time);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137;
        this.hour();
        this.state = 138;
        this.match(ApplicationMessageParser.T__15);
        this.state = 139;
        this.minute();
        this.state = 140;
        this.match(ApplicationMessageParser.T__15);
        this.state = 141;
        this.second();
        this.state = 142;
        this.match(ApplicationMessageParser.T__15);
        this.state = 143;
        this.timeZone();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HourContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ApplicationMessageParser.RULE_hour;
    return this;
}

HourContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HourContext.prototype.constructor = HourContext;

HourContext.prototype.DecimalNumber = function() {
    return this.getToken(ApplicationMessageParser.DecimalNumber, 0);
};

HourContext.prototype.enterRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.enterHour(this);
	}
};

HourContext.prototype.exitRule = function(listener) {
    if(listener instanceof ApplicationMessageListener ) {
        listener.exitHour(this);
	}
};




ApplicationMessageParser.HourContext = HourContext;

ApplicationMessageParser.prototype.hour = function() {

    var localctx = new HourContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, ApplicationMessageParser.RULE_hour);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 145;
        this.match(ApplicationMessageParser.DecimalNumber);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
